# asva_backend

./: .gitignore  DEMO.md  PRICING-AND-PLAN.md  README.md  SETUP.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/pipecat-agent/: .dockerignore  .gitignore  Dockerfile  README.md  call.ps1  check_import.py  pyproject.toml  run-server.ps1  smoke_streaming_stt.py  start-stack.ps1
apps/pipecat-agent/scripts/: probe_tts_ws.py  probe_tts_ws_adapter.py  upload_pronunciation_dict.py
apps/pipecat-agent/src/voice_agent/: __init__.py  audio_codec.py  cartesia_tts.py  conversation_state.py  cost_guard.py  demo_call.py  elevenlabs_tts.py  exotel_transport.py  exotel_ws_handler.py  gemini_llm.py  google_calendar.py  groq_llm.py  intro_cache.py  language_state.py  lead_scorer.py  local_audio.py  pain_library.py  phrase_cache.py  pipeline.py  post_call_hook.py  prompts.py  qualification.py  r2_client.py  sarvam_streaming_stt.py  sarvam_stt.py  sarvam_tts.py  sarvam_tts_ws.py  server.py  smallest_tts.py  streaming_orchestrator.py  supabase_client.py  tenant_config.py  turn_orchestrator.py  webhook.py  whatsapp.py
apps/pipecat-agent/src/voice_agent/industry/: __init__.py  chemicals.py  real_estate.py  voice_agent_sales.py
apps/pipecat-agent/tests/: test_audio_codec.py  test_backchannel.py  test_conversation_state.py  test_cost_guard.py  test_exotel_transport.py  test_exotel_ws_handler.py  test_gemini_llm.py  test_intro_cache.py  test_language_state.py  test_lead_scorer.py  test_local_audio.py  test_locality_normalizer.py  test_pain_library.py  test_phrase_cache.py  test_pipeline.py  test_post_call_hook.py  test_prompts.py  test_qualification.py  test_r2_client.py  test_sarvam_streaming_stt.py  test_sarvam_stt.py  test_sarvam_tts.py  test_sarvam_tts_ws.py  test_server.py  test_smallest_tts.py  test_streaming_orchestrator.py  test_supabase_client.py  test_turn_orchestrator.py  test_webhook.py
apps/web/: middleware.ts  next.config.mjs  open-next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vercel.json  wrangler.toml
apps/web/app/: globals.css  layout.tsx
apps/web/components/: CallNowButton.tsx  CreditCalculator.tsx  CsvUpload.tsx  DncDialog.tsx  ExtractedFields.tsx  LeadStatsStrip.tsx  LeadStatusBadge.tsx  LeadsExplorer.tsx  LeadsRealtimeRefresher.tsx  LeadsTable.tsx  ManualLeadDialog.tsx  NavBar.tsx  PerformanceCard.tsx  PipelineBoard.tsx  PipelineChips.tsx  QualificationPanel.tsx  ScoreBadge.tsx  ScoreBar.tsx  ScoreHero.tsx  StartAiCallButton.tsx  StatCard.tsx  SummaryCard.tsx  SyncFromGoogleButton.tsx  TranscriptView.tsx  UnitsRemainingWidget.tsx
apps/web/lib/: auth.ts  (+1 more)
docs/plans/: 2026-05-21-plan-1-foundation-and-crm.md  2026-05-21-plan-2-voice-agent.md  2026-05-21-plan-3-scoring-handoff-demo.md
docs/specs/: 2026-05-21-spc-voice-agent-design.md
infra/samvaad/: spc-priya.agent.json
infra/seed/: demo-leads.csv
infra/supabase/: SETUP.sql
tools/justdial-scrape/: .gitignore  README.md  package.json  scrape.js
(+89 files in other folders)
