[project]
name = "voice-agent"
version = "0.1.0"
description = "Pipecat-based outbound voice agent for SPC. Sarvam STT/TTS + Gemini LLM + Plivo SIP."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "pipecat-ai>=0.0.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "structlog>=24.1",
    "google-generativeai>=0.7",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    # Streaming STT WebSocket (saaras:v3) — exotel_ws_handler's primary
    # transcription path; batch REST remains the in-call fallback.
    "sarvamai>=0.1.28",
    # Native Hindi/Tamil number words for TTS. Bulbul v3 has NO number
    # preprocessing (enable_preprocessing is v2-only), so "30000" is read
    # raw and mangled ("2 zero hazaar"). AI4Bharat's lib spells it
    # "तीस हज़ार"/"முப்பதாயிரம்" with correct lakh/crore + Tamil sandhi.
    # MIT, pure-Python, zero transitive deps.
    "indic-numtowords>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Only needed for the local mic/speaker harness (voice_agent.local_audio).
# Skipped on CI / Pipecat container — those use the real telephony transport.
local-audio = [
    "sounddevice>=0.4",
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
